WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124860
MediaStreamRegistry should store MediaStreams instead of MediaStreamPrivates
https://bugs.webkit.org/show_bug.cgi?id=124860
Summary
MediaStreamRegistry should store MediaStreams instead of MediaStreamPrivates
Nick Diego Yamane (diegoyam)
Reported
2013-11-25 14:07:33 PST
MediaStreamRegistry should store MediaStreams instead of MediaStreamPrivates
Attachments
Patch
(4.16 KB, patch)
2013-11-25 14:17 PST
,
Nick Diego Yamane (diegoyam)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nick Diego Yamane (diegoyam)
Comment 1
2013-11-25 14:17:06 PST
Created
attachment 217831
[details]
Patch
WebKit Commit Bot
Comment 2
2013-11-25 14:53:10 PST
Comment on
attachment 217831
[details]
Patch Clearing flags on attachment: 217831 Committed
r159767
: <
http://trac.webkit.org/changeset/159767
>
WebKit Commit Bot
Comment 3
2013-11-25 14:53:12 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug