MediaStreamRegistry should store MediaStreams instead of MediaStreamPrivates https://bugs.webkit.org/show_bug.cgi?id=124860

Patch by Nick Diego Yamane <nick.yamane@openbossa.org> on 2013-11-25
Reviewed by Eric Carlson.

MediaStreamRegistry::lookup() should return a MediaStream instead of MediaStreamPrivate.

No new tests needed. No behavior changes.

* Modules/mediastream/MediaStreamRegistry.cpp:
(WebCore::MediaStreamRegistry::registerURL): m_privateStreams -> m_mediaStreams
(WebCore::MediaStreamRegistry::unregisterURL): Ditto.
(WebCore::MediaStreamRegistry::lookup): Override URLRegistry::lookup() instead of add a
new method MediaStream::lookupMediaStreamPrivate().
* Modules/mediastream/MediaStreamRegistry.h:
* html/HTMLMediaElement.cpp:
(HTMLMediaElement::loadResource): call lookup() instead of lookupMediaStreamPrivate()

Canonical link: https://commits.webkit.org/143018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159767 268f45cc-cd09-0410-ab3c-d52691b4dbfc